--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -12,6 +12,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variables\n",
+    "- A variable is an abstraction inside a program that can hold a value\n",
+    "- It organizes data by labeling it with a descriptive name\n",
+    "- It consists of three parts: name, value, and type\n",
+    "- Types of data\n",
+    "    - Integer: A number\n",
+    "    - Text/string: A word\n",
+    "    - Boolean: Data that determines if something is true or false\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vivian <class 'str'>\n",
+      "4 <class 'int'>\n",
+      "False <class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"vivian\" #string\n",
+    "print(name, type(name))\n",
+    "\n",
+    "number = 4 #integer\n",
+    "print(number, type(number))\n",
+    "\n",
+    "boolean = False\n",
+    "print(boolean, type(boolean))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A list of data can also be stored in variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assignments"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -22,8 +77,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this is a test commit"
+    "### Data Abstraction"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -33,7 +95,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
