--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "name = \"vivian\" #string\n",
+    "name = \"table1\" #string\n",
     "print(name, type(name))\n",
     "\n",
     "number = 4 #integer\n",
@@ -56,8 +56,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A list of data can also be stored in variables"
+    "A list of data can also be stored in variables\n",
+    "Why is that useful?\n",
+    "    - print/use specific values in the list without creating a lot of variables"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "icecream\n"
+     ]
+    }
+   ],
+   "source": [
+    "foods = [\"pizza\", \"burgers\", \"icecream\"]\n",
+    "print(foods[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
