--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -56,27 +56,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A list of data can also be stored in variables\n",
-    "Why is that useful?\n",
-    "    - print/use specific values in the list without creating a lot of variables"
+    "A list of data can also be stored in variables. Why is that useful?\n",
+    "- print/retrieve specific values in the list without creating a lot of variables\n",
+    "- easily remove/add items into the list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "icecream\n"
+      "yellow\n"
      ]
     }
    ],
    "source": [
-    "foods = [\"pizza\", \"burgers\", \"icecream\"]\n",
-    "print(foods[2])"
+    "colors = [\"red\", \"orange\", \"yellow\"]\n",
+    "print(colors[2])"
    ]
   },
   {
