--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -48,8 +48,8 @@
     "number = 4 #integer\n",
     "print(number, type(number))\n",
     "\n",
-    "boolean = False\n",
-    "print(boolean, type(boolean))"
+    "isAbsent = False\n",
+    "print(isAbsent, type(isAbsent))"
    ]
   },
   {
@@ -58,19 +58,19 @@
    "source": [
     "A list of data can also be stored in variables. Why is that useful?\n",
     "- print/retrieve specific values in the list without creating a lot of variables\n",
-    "- easily remove/add items into the list"
+    "- easily remove/add/change items into the list (get into this soon)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "yellow\n"
+      "['red', 'orange', 'yellow']\n"
      ]
     }
    ],
@@ -88,7 +88,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignments"
+    "### Assignments\n",
+    "- The assignment operator allows a program to change the value represented by a variable\n",
+    "- remove/add/change items into the list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The value stored in a variable will be the most recent value assigned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "b = a\n",
+    "a = 2\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Changing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "currentScore = 10\n",
+    "highScore = currentScore\n",
+    "currentScore = 7\n",
+    "print(highScore)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "your turn!"
    ]
   },
   {
@@ -96,7 +159,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num1 = 5\n",
+    "num2 = 9\n",
+    "num1 = num2\n",
+    "\n",
+    "print(num1)\n",
+    "print(num2)"
+   ]
   },
   {
    "cell_type": "markdown",
