--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vivian <class 'str'>\n",
+      "table1 <class 'str'>\n",
       "4 <class 'int'>\n",
       "False <class 'bool'>\n"
      ]
@@ -58,19 +58,19 @@
    "source": [
     "A list of data can also be stored in variables. Why is that useful?\n",
     "- print/retrieve specific values in the list without creating a lot of variables\n",
-    "- easily remove/add/change items into the list (get into this soon)"
+    "- easily remove/add/change items into the list "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['red', 'orange', 'yellow']\n"
+      "yellow\n"
      ]
     }
    ],
@@ -82,15 +82,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Assignments\n",
     "- The assignment operator allows a program to change the value represented by a variable\n",
-    "- remove/add/change items into the list"
+    "- Used to assigning values to variables\n",
+    "\n",
+    "| Operator | Description | Syntax | Outcome when print(a) |\n",
+    "|-|-|-|-|\n",
+    "| = | Assign value of right side of expression to left side operand | a = b | b |\n",
+    "| += | Add right side operand with left side operand and then assign to left operand | a += b | a + b |\n",
+    "| -= | Subtract right operand from left operand and then assign to left operand: True if both operands are equal | a -= b | a - b |\n",
+    "| *= | Multiply right operand with left operand and then assign to left operand | a *= b | a * b |\n",
+    "| /= | Divide left operand with right operand and then assign to left operand | a /= b | a / b |\n",
+    "| **= | Calculate exponent(raise power) value using operands and assign value to left operand | a **= b | a ^ b |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 1\n",
+    "b = 2\n",
+    "a = b\n",
+    "print(a)\n"
    ]
   },
   {
@@ -129,17 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "currentScore = 10\n",
     "highScore = currentScore\n",
@@ -151,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "your turn!"
+    "your turn! Here are 2 problems for you to solve"
    ]
   },
   {
@@ -166,6 +174,24 @@
     "\n",
     "print(num1)\n",
     "print(num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num1 = 15\n",
+    "num2 = 26\n",
+    "num3 = 42\n",
+    "num2 = num3\n",
+    "num3 = num1\n",
+    "num1 = num2\n",
+    "\n",
+    "print(num1)\n",
+    "print(num2)\n",
+    "print(num3)"
    ]
   },
   {
