--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -23,7 +23,15 @@
     "    - Integer: A number\n",
     "    - Text/string: A word\n",
     "    - Boolean: Data that determines if something is true or false\n",
-    "\n"
+    "\n",
+    "**Naming Variables**\n",
+    "| Do's | Don'ts | Why |\n",
+    "|-|-|-|\n",
+    "| highScore | highestScoreInTheGame | Keep it simple and easy to read, having variables that are too complicated can become messy later on |\n",
+    "| highScore | highscore | Differentiate the words in your variable with a capital letter. Makes things easier to read |\n",
+    "| firstName | n | not specific enough/vague |\n",
+    "| isRaining | is it raining | spaces are improper syntax |\n",
+    "| phoneNumber | 555-number | dashes are improper syntax and numbers should be avoided in variable names |\n"
    ]
   },
   {
@@ -140,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Changing Values"
+    "**Changing Values**"
    ]
   },
   {
