--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -19,19 +19,21 @@
     "- A variable is an abstraction inside a program that can hold a value\n",
     "- It organizes data by labeling it with a descriptive name\n",
     "- It consists of three parts: name, value, and type\n",
-    "- Types of data\n",
-    "    - Integer: A number\n",
-    "    - Text/string: A word\n",
-    "    - Boolean: Data that determines if something is true or false\n",
+    "- Using meaningful variables names helps with readability of program code and understanding of what values are represented by the variables\n",
     "\n",
     "**Naming Variables**\n",
     "| Do's | Don'ts | Why |\n",
     "|-|-|-|\n",
-    "| highScore | highestScoreInTheGame | Keep it simple and easy to read, having variables that are too complicated can become messy later on |\n",
+    "| highScore | highestScoreInTheGame | Keep it simple and easy to read, having variables that are too complicated can cause your code to become messy later on |\n",
     "| highScore | highscore | Differentiate the words in your variable with a capital letter. Makes things easier to read |\n",
     "| firstName | n | not specific enough/vague |\n",
     "| isRaining | is it raining | spaces are improper syntax |\n",
-    "| phoneNumber | 555-number | dashes are improper syntax and numbers should be avoided in variable names |\n"
+    "| phoneNumber | 555-number | dashes are improper syntax and numbers should be avoided in variable names |\n",
+    "\n",
+    "- Types of data\n",
+    "    - Integer: A number\n",
+    "    - Text/string: A word\n",
+    "    - Boolean: Data that determines if something is true or false"
    ]
   },
   {
