--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -19,8 +19,13 @@
     "- A variable is an abstraction inside a program that can hold a value\n",
     "- It organizes data by labeling it with a descriptive name\n",
     "- It consists of three parts: name, value, and type\n",
-    "- Using meaningful variables names helps with readability of program code and understanding of what values are represented by the variables\n",
-    "\n",
+    "- Using meaningful variables names helps with readability of program code and understanding of what values are represented by the variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Naming Variables**\n",
     "| Do's | Don'ts | Why |\n",
     "|-|-|-|\n",
@@ -28,8 +33,13 @@
     "| highScore | highscore | Differentiate the words in your variable with a capital letter. Makes things easier to read |\n",
     "| firstName | n | not specific enough/vague |\n",
     "| isRaining | is it raining | spaces are improper syntax |\n",
-    "| phoneNumber | 555-number | dashes are improper syntax and numbers should be avoided in variable names |\n",
-    "\n",
+    "| phoneNumber | 555-number | dashes are improper syntax and numbers should be avoided in variable names |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Types of data\n",
     "    - Integer: A number\n",
     "    - Text/string: A word\n",
