--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -26,7 +26,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Naming Variables**\n",
+    "**Naming Variables**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "| Do's | Don'ts | Why |\n",
     "|-|-|-|\n",
     "| highScore | highestScoreInTheGame | Keep it simple and easy to read, having variables that are too complicated can cause your code to become messy later on |\n",
