--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variables\n",
+    "## Variables\n",
     "- A variable is an abstraction inside a program that can hold a value\n",
     "- It organizes data by labeling it with a descriptive name\n",
     "- It consists of three parts: name, value, and type\n",
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignments\n",
+    "## Assignments\n",
     "- The assignment operator allows a program to change the value represented by a variable\n",
     "- Used to assigning values to variables\n",
     "\n",
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Abstraction"
+    "## Data Abstraction"
    ]
   },
   {
