uhm, yeah? hopefully

--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -228,6 +228,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data abstraction is the method used in coding to represent data in a useful form, by taking away aspects of data that aren't being used in the situation. Variables are a primary tool in data abstraction.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AP Exam Use of Data Abstraction\n",
+    "With the properties of the AP Exam pseudocode, lists work differently from what we've learned in python so far, here are the two major differences:\n",
+    "- The index does not start at 0 but 1\n",
+    "![]({{ site.baseurl }}/images/list-difference-1.png \"Visual\")\n",
+    "- There is only one method of interchanging data between lists, and that is completely overwriting previous list data with the other list\\n\",\n",
+    "![]({{ site.baseurl }}/images/list-difference-2.png \"Visual\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
