--- a/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-11-27-var-ass-dataab-lecture.ipynb
@@ -224,14 +224,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Abstraction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Data abstraction is the method used in coding to represent data in a useful form, by taking away aspects of data that aren't being used in the situation. Variables are a primary tool in data abstraction.\n"
+    "## Data Abstraction\n",
+    "Data abstraction is the method used in coding to represent data in a useful form, by taking away aspects of data that aren't being used in the situation. Variables are a primary tool in data abstraction."
    ]
   },
   {
