--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -235,17 +235,10 @@
     "## AP Exam Use of Data Abstraction\n",
     "With the properties of the AP Exam pseudocode, lists work differently from what we've learned in python so far, here are the two major differences:\n",
     "- The index does not start at 0 but 1\n",
-    "![]({{ site.baseurl }}/images/list-difference-1.png \"Visual\")\n",
+    "<img src=\"https://github.com/vivianknee/t2p3t1/blob/master/images/list-difference-1.png?raw=true\" alt=\"Visual\">\n",
     "- There is only one method of interchanging data between lists, and that is completely overwriting previous list data with the other list\\n\",\n",
-    "![]({{ site.baseurl }}/images/list-difference-2.png \"Visual\")"
+    "<img src=\"https://github.com/vivianknee/t2p3t1/blob/master/images/list-difference-2.png?raw=true\" alt=\"Visual\">"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
