--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -225,7 +225,242 @@
    "metadata": {},
    "source": [
     "## Data Abstraction\n",
-    "Data abstraction is the method used in coding to represent data in a useful form, by taking away aspects of data that aren't being used in the situation. Variables are a primary tool in data abstraction."
+    "\n",
+    "- Method used in coding to represent data in a useful form, by taking away aspects of data that aren't being used in the situation\n",
+    "- Variables and lists are primary tools in data abstraction\n",
+    "- Provides a separation between the abstract properties of a data type and the concrete details of its representation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lists & Strings\n",
+    "\n",
+    "- List = ordered sequence of elements\n",
+    "- Element = individual value in a list that is assigned to a unique index\n",
+    "- Index = a way to reference the elements in a list or string using natural numbers; each element of a string is referenced by an index\n",
+    "- String = ordered sequence of characters (Letters, numbers, special characters)\n",
+    "\n",
+    "> NOTE: index starts at 1 for AP Exam, must be whole numbers, cannot be negative, and goes up to the number of elements in the list\n",
+    "\n",
+    "> We can represent a list or string using a variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example of a List - Colors\n",
+    "\n",
+    "| Index | Element |\n",
+    "|-|-|\n",
+    "| 1 | Green|\n",
+    "| 2 | Blue |\n",
+    "| 3 | Purple |\n",
+    "| 4 | Pink |\n",
+    "\n",
+    "\n",
+    "- At Index 1, the element is green, at index 2, the element is blue, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Managing the Complexity of a Program through Data Abstraction\n",
+    "\n",
+    "- Data abstractions help manage complexity in programs by giving a collection of data a name without referencing the specific details of the representation\n",
+    "- Developing a data abstraction to use in a program can result in a program that is easier to develop and maintain\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Lists as Data Abstractions\n",
+    "\n",
+    "**What are Lists?**\n",
+    "\n",
+    "- Allow for data abstraction\n",
+    "- Bundle variables together\n",
+    "- Store multiple elements\n",
+    "- Allows multiple related items to be treated as a single value\n",
+    "- Give one name to a set of memory cells\n",
+    "- Can keep adding elements to it as needed\n",
+    "- Can store elements as a single variable by using a list\n",
+    "\n",
+    "**3 Types of List Operations**\n",
+    "\n",
+    "1. Assigning values to a list at certain indices\n",
+    "2. Creating an empty list and assigning it to a variable\n",
+    "3. Assigning a copy of one list to another list (setting one list equal to another list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1. Assigning values to a list at certain indices**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['pink', 'yellow', 'green', 'blue', 'orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "colorsList=[\"pink\", \"yellow\", \"green\", \"blue\", \"orange\"]\n",
+    "\n",
+    "print(colorsList)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. Creating an empty list and assigning it to a variable**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colorsList=[] # can be used if you want to create a list that can be filled with values later"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3. Assigning a copy of one list to another list (setting one list equal to another list)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['black', 'blue', 'orange', 'yellow', 'purple', 'green', 'pink']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reversing a list \n",
+    "# copy of the list is made; the list isn't sorted in place\n",
+    "def Reverse(lst): # defining variable: lst \n",
+    "    new_lst = lst[::-1] \n",
+    "    return new_lst\n",
+    " \n",
+    "lst = [\"pink\", \"green\", \"purple\", \"yellow\", \"orange\", \"blue\", \"black\"]\n",
+    "print(Reverse(lst)) # reverse 1st"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is Managing Complexity?\n",
+    "\n",
+    "- Improving code readability\n",
+    "- Reducing the need for new variables as more data is collected\n",
+    "- Can easily update data\n",
+    "- Can easily convert data to different forms\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How do Lists Help Manage the Complexity of a Program?\n",
+    "\n",
+    "- Don’t need as many variables\n",
+    "- Can easily change the number of variables\n",
+    "- Can apply the same mathematical computation (through an algorithm) to all the elements in the list\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Abstraction Practice\n",
+    "\n",
+    "> Manage the complexity of the given code below using a list. Re-write the code segment in a less complex way, but with the same result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "green\n",
+      "red\n",
+      "pink\n",
+      "purple\n",
+      "blue\n",
+      "brown\n"
+     ]
+    }
+   ],
+   "source": [
+    "color1=\"green\"\n",
+    "color2=\"red\"\n",
+    "color3=\"pink\"\n",
+    "color4=\"purple\"\n",
+    "color5=\"blue\"\n",
+    "color6=\"brown\"\n",
+    "\n",
+    "print(color1)\n",
+    "print(color2)\n",
+    "print(color3)\n",
+    "print(color4)\n",
+    "print(color5)\n",
+    "print(color6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['green', 'red', 'pink', 'purple', 'blue', 'brown']\n"
+     ]
+    }
+   ],
+   "source": [
+    "colorList=[\"green\", \"red\", \"pink\", \"purple\", \"blue\", \"brown\"]\n",
+    "\n",
+    "print(str(colorList))"
    ]
   },
   {
