--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -224,6 +224,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Which of these will show the sum?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num2 += num1\n",
+    "print(num1)\n",
+    "print(num2)\n",
+    "\n",
+    "print(str(num1)+ str(num2))\n",
+    "print(num1 + num2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Abstraction\n",
     "\n",
     "- Method used in coding to represent data in a useful form, by taking away aspects of data that aren't being used in the situation\n",
@@ -306,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -472,11 +493,92 @@
     "- The index does not start at 0 but 1\n",
     "- There is only one method of interchanging data between lists, and that is completely overwriting previous list data with the other list\\n\","
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework\n",
+    "You will turn in a program that utilizes lists and variables as it's primary function, options could be a quiz, a sorter, database, or wherever your imagination brings you. You will be graded on how well you understood the concepts and if you used anything other than just the simplest parts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quiz template, if you do use it, fix the issues, and add more to it than it's current barebones state. I would recommend using it to create something related to school. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question1\n",
+      "\n",
+      "Correct! Score: 1\n",
+      "Question2\n",
+      "\n",
+      "Incorrect! The correct answer was Solution2\n",
+      "\n",
+      "Question3\n",
+      "\n",
+      "Incorrect! The correct answer was Solution3\n",
+      "\n",
+      "Question4\n",
+      "\n",
+      "Incorrect! The correct answer was Solution4\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb Cell 39\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb#X54sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m quesAmount\u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(quesList)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb#X54sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mwhile\u001b[39;00m quesCount \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m quesAmount:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb#X54sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mprint\u001b[39m(quesList[quesCount] \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb#X54sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     guess \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb#X54sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39mif\u001b[39;00m(guess \u001b[39m==\u001b[39m soluList[quesCount]):\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "# Defining my variables here\n",
+    "quesCount = 0\n",
+    "\n",
+    "# Use a dictionary for the questions\n",
+    "quesList = [\"Question1\", \"Question2\", \"Question3\", \"Question4\"]\n",
+    "\n",
+    "# Use a dictionary for the correct solutions\n",
+    "soluList = [\"Solution1\", \"Solution2\", \"Solution3\", \"Solution4\"]\n",
+    "\n",
+    "quesAmount= len(quesList)\n",
+    "\n",
+    "hrm quesCount <= quesAmount:\n",
+    "    print(quesList[quescount] + \"\\n\")\n",
+    "    guess = input()\n",
+    "    if(guess == soluList[quesamOOuaunt]):\n",
+    "        score+=1\n",
+    "        print(\"Correct! Score: \")\n",
+    "    else: \n",
+    "        print(\"Incorrect! The correct answer was \" + soluList(quescount) + \"\\n\")\n",
+    "    quesCount += 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"Final score: \" + str(score))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -490,12 +592,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "289762bfef0c13eec96403755dc6a123221745d77b4e51a71a7ef5c7578571d1"
    }
   }
  },
