just a bit more

--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -563,8 +563,7 @@
     "    print(quesList[quescount] + \"\\n\")\n",
     "    guess = input()\n",
     "    if(guess == soluList[quesamOOuaunt]):\n",
-    "        score+=1\n",
-    "        print(\"Correct! Score: \")\n",
+    "        print(\"Correct!\")\n",
     "    else: \n",
     "        print(\"Incorrect! The correct answer was \" + soluList(quescount) + \"\\n\")\n",
     "    quesCount += 1\n",
