--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -574,6 +574,30 @@
     "\n",
     "print(\"Final score: \" + str(score))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Name | Complete | Correct | Wow Factor | Final Score | Notes |\n",
+    "|-|-|-|-|-|-|\n",
+    "| Sreeja Gangapuram | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
+    "| Moein Taleban | 1/1 | 1/1 | 0.7/1 | 0.9/1 | <li>Utilized a list but could've enforced some functions to maximize efficiency </li>  <li>Output is not as clear as it could be </li> <li>Only the questions are printed and the number 4 is not referred to as the score which might be confusing </li> |\n",
+    "| Ekam Kaire | 1/1 | 1/1 | 1/1 | 1/1 | <li>Unique and creative use of lists and dictionaries</li> <li>Stores and outputs data based on user's preference</li> <li>Utilizes functions and if statements</li> |\n",
+    "| Azeem Khan | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> <li>Score is given as a number and a percentage</li> |\n",
+    "| Jishnu Singiresu | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>created a function which is called at the end</li> <li>nice and clean output</li> |\n",
+    "| Soham Kamat | 1/1 | 1/1 | 1/1 | 1/1 | <li>creative and advanced use of lists</li>  |\n",
+    "| Trey | 1/1 | 1/1 | 0.6/1 | 0.8/1 | <li>Used list to print information</li> <li>no use of functions or loops</li>\n",
+    "| Joshua Williams | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Yuri Subramaniam | 1/1 | 1/1 | 1/1 | 1/1 |<li>creative and advanced use of lists</li> |\n",
+    "| Max Wu | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
+    "| | | | | |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
