--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -546,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Name | Complete | Correct | Wow Factor | Final Score | Notes |\n",
+    "| Name | Complete | Correct | Complexity | Final Score | Notes |\n",
     "|-|-|-|-|-|-|\n",
     "| Sreeja Gangapuram | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
     "| Moein Taleban | 1/1 | 1/1 | 0.7/1 | 0.9/1 | <li>Utilized a list but could've enforced some functions to maximize efficiency </li>  <li>Output is not as clear as it could be </li> <li>Only the questions are printed and the number 4 is not referred to as the score which might be confusing </li> |\n",
