--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -558,8 +558,7 @@
     "| Joshua Williams | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "| Yuri Subramaniam | 1/1 | 1/1 | 1/1 | 1/1 |<li>creative and advanced use of lists</li> |\n",
     "| Max Wu | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
-    "| Kalani Omana | 1/1 |  | | |\n",
-    "| Jonathan | 1/1 | 1/1 | /1 | /1 |\n",
+    "| Jonathan | 0/1 | 0/1 | 0/1 | 0/1 | <li> Link is 404 error</li> |\n",
     "| Alan Liu Sui | 1/1 | 1/1 | /1 | /1 |\n",
     "| Dhruva Iyer | 1/1 | 1/1 | /1 | /1 |\n",
     "| Ethan | 1/1 | 1/1 | /1 | /1 |\n",
