--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -558,7 +558,17 @@
     "| Joshua Williams | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "| Yuri Subramaniam | 1/1 | 1/1 | 1/1 | 1/1 |<li>creative and advanced use of lists</li> |\n",
     "| Max Wu | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
-    "| | | | | |\n"
+    "| Kalani Cabral-Omana | 1/1 | 1/1 | 0.9/1 | 0.95/1 | <li>Utilized a list as well as other functions to make code more efficient</li>  <li>Good use of while loops and if-else loops </li> |\n",
+    "| Akshat Parikh | 1/1 | 1/1 | 0.9/1 | 0.95/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
+    "| Aiden Huynh | 1/1 | 1/1 | 0.95/1 | 1/1 | <li>Advanced use of lists</li> <li>Advanced use of functions</li> |\n",
+    "| Toby Leeder | 1/1 | 1/1 | 0/95/1 | 1/1 | <li>Advanced use of lists</li> <li>Advanced use of functions</li> <li>managed complexity well and simplified code</li> |\n",
+    "| Derek Sol | 1/1 | 1/1 | 0.85/1 | 0.95/1 | <li>managed complexity well and simplified code</li> <li>good use of storing variables</li> <li>good use of functions</li> |\n",
+    "| Samit Poojary | 1/1 | 1/1  | 1/1 | 1/1 | <li>managed complexity well and simplified code</li> <li>great use of list with both the question and the answer</li> <li>good use of for loop</li> |\n",
+    "| Evan Aparri | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>great use of list with both the question and the answer</li> <li>good use of for loop</li> |\n",
+    "|James Armstrong | 1/1 | 1/1 | 0.85/1 | 0.92/1 | <li>great use of list</li> |\n",
+    "| Jeffrey Lee | 1/1 | 1/1  | 0.95/1 | 0.95/1 | <li>great use of list with both the question and the answer</li> <li>good use of for loop</li> |\n",
+    "| Tirth Thakkar | 1/1 | 1/1 | 0.95/1 | 0.95/1 | <li>great use of list with both the question and the answer</li> <li>good use of for loop</li> |\n",
+    "\n"
    ]
   }
  ],
