--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -548,16 +548,15 @@
    "source": [
     "| Name | Complete | Correct | Complexity | Final Score | Notes |\n",
     "|-|-|-|-|-|-|\n",
-    "| Sreeja Gangapuram | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
+    "| Sreeja Gangapuram | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
     "| Moein Taleban | 1/1 | 1/1 | 0.7/1 | 0.9/1 | <li>Utilized a list but could've enforced some functions to maximize efficiency </li>  <li>Output is not as clear as it could be </li> <li>Only the questions are printed and the number 4 is not referred to as the score which might be confusing </li> |\n",
     "| Ekam Kaire | 1/1 | 1/1 | 1/1 | 1/1 | <li>Unique and creative use of lists and dictionaries</li> <li>Stores and outputs data based on user's preference</li> <li>Utilizes functions and if statements</li> |\n",
-    "| Azeem Khan | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> <li>Score is given as a number and a percentage</li> |\n",
-    "| Jishnu Singiresu | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>created a function which is called at the end</li> <li>nice and clean output</li> |\n",
+    "| Azeem Khan | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> <li>Score is given as a number and a percentage</li> |\n",
+    "| Jishnu Singiresu | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>created a function which is called at the end</li> <li>nice and clean output</li> |\n",
     "| Soham Kamat | 1/1 | 1/1 | 1/1 | 1/1 | <li>creative and advanced use of lists</li>  |\n",
-    "| Trey | 1/1 | 1/1 | 0.6/1 | 0.85/1 | <li>Used list to print information</li> <li>Program could be moer practical and useful. Maybe a database that prints info based on what user input is</li>\n",
-    "| Joshua Williams | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Trey | 1/1 | 1/1 | 0.6/1 | 0.8/1 | <li>Used list to print information</li> <li>no use of functions or loops</li>\n",
+    "| Joshua Williams | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "| Yuri Subramaniam | 1/1 | 1/1 | 1/1 | 1/1 |<li>creative and advanced use of lists</li> |\n",
-<<<<<<< HEAD
     "| Max Wu | 1/1 | 1/1 | 0.8/1 | 0.92/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
     "| Kalani Cabral-Omana | 1/1 | 1/1 | 0.9/1 | 0.95/1 | <li>Utilized a list as well as other functions to make code more efficient</li>  <li>Good use of while loops and if-else loops </li> |\n",
     "| Akshat Parikh | 1/1 | 1/1 | 0.9/1 | 0.95/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
@@ -566,21 +565,10 @@
     "| Derek Sol | 1/1 | 1/1 | 0.85/1 | 0.95/1 | <li>managed complexity well and simplified code</li> <li>good use of storing variables</li> <li>good use of functions</li> |\n",
     "| Samit Poojary | 1/1 | 1/1  | 1/1 | 1/1 | <li>managed complexity well and simplified code</li> <li>great use of list with both the question and the answer</li> <li>good use of for loop</li> |\n",
     "| Evan Aparri | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>great use of list with both the question and the answer</li> <li>good use of for loop</li> |\n",
-    "|James Armstrong | 1/1 | 1/1 | 0.85/1 | 0.92/1 | <li>great use of list</li> |\n",
+    "|James Armstrong | 1/1 | 1/1 | 0.85/1 | 0.92/1 | <li>good use of list</li> |\n",
     "| Jeffrey Lee | 1/1 | 1/1  | 0.95/1 | 0.95/1 | <li>great use of list with both the question and the answer</li> <li>good use of for loop</li> |\n",
     "| Tirth Thakkar | 1/1 | 1/1 | 0.95/1 | 0.95/1 | <li>great use of list with both the question and the answer</li> <li>good use of for loop</li> |\n",
     "\n"
-=======
-    "| Max Wu | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
-    "| Jonathan | 0/1 | 0/1 | 0/1 | 0/1 | <li> Link is 404 error</li> |\n",
-    "| Alan Liu Sui | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Dhruva Iyer | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Ethan | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Dash Penning | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Jeffery Fonesca | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Ahah Biabani | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Abdullah | 1/1 | 1/1 | /1 | /1 |\n"
->>>>>>> 33b1afdff8c7be75435bd51650abd0b6ad412f27
    ]
   }
  ],
