--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -568,6 +568,16 @@
     "|James Armstrong | 1/1 | 1/1 | 0.85/1 | 0.92/1 | <li>good use of list</li> |\n",
     "| Jeffrey Lee | 1/1 | 1/1  | 0.95/1 | 0.95/1 | <li>great use of list with both the question and the answer</li> <li>good use of for loop</li> |\n",
     "| Tirth Thakkar | 1/1 | 1/1 | 0.95/1 | 0.95/1 | <li>great use of list with both the question and the answer</li> <li>good use of for loop</li> |\n",
+    "| Jonathan Wu | 1/1 | 1/1 | 0.9/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Alan Liu Sui | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Dhruva Iyer | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
+    "| Ethan Truong | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Dash Penning | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Jeffery Fonesca | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Ahah Biabani | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Abdullah | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li>\n",
+    "| Aniket Charkadeo | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Tanay Patel | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "\n"
    ]
   }
