--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -574,10 +574,11 @@
     "| Ethan Truong | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "| Dash Penning | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "| Jeffery Fonesca | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
-    "| Ahah Biabani | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Ahad Biabani | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "| Abdullah | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li>\n",
     "| Aniket Charkadeo | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "| Tanay Patel | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Martin Nguyen | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "\n"
    ]
   }
