--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -579,6 +579,7 @@
     "| Aniket Charkadeo | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "| Tanay Patel | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "| Martin Nguyen | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
+    "| Gene Chang | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "\n"
    ]
   }
