--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -557,21 +557,13 @@
     "| Joshua Williams | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Used for loop to iterate through the questions. Efficient and allows for clean code</li> <li>Output is clear and specific, states question and answer</li> |\n",
     "| Yuri Subramaniam | 1/1 | 1/1 | 1/1 | 1/1 |<li>creative and advanced use of lists</li> |\n",
     "| Max Wu | 1/1 | 1/1 | 0.8/1 | 0.95/1 | <li>Utilized a list as well as other functions to make code more efficient</li> <li>Very clear output of what happened;Printed correct answers, score, and questions</li> |\n",
-    "| Kalani Omana | 1/1 |  | | |\n",
-    "| Jonathan | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Alan Liu Sui | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Dhruva Iyer | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Ethan | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Dash Penning | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Jeffery Fonesca | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Ahah Biabani | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Abdullah | 1/1 | 1/1 | /1 | /1 |\n"
+    "| Luke Angelini| 0.9/1 | 0.7/1 | 0.7/1 | 0.7/1 |\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -585,12 +577,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "289762bfef0c13eec96403755dc6a123221745d77b4e51a71a7ef5c7578571d1"
    }
   }
  },
