--- a/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
+++ b/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb
@@ -565,7 +565,8 @@
     "| Dash Penning | 1/1 | 1/1 | /1 | /1 |\n",
     "| Jeffery Fonesca | 1/1 | 1/1 | /1 | /1 |\n",
     "| Ahah Biabani | 1/1 | 1/1 | /1 | /1 |\n",
-    "| Abdullah | 1/1 | 1/1 | /1 | /1 |\n"
+    "| Abdullah | 1/1 | 1/1 | /1 | /1 |\n",
+    "| Luke Angelini | .9/1 | 0.7/1 | 0.7/1 | 0.7/1 |\n"
    ]
   }
  ],
